macros/tests/examples/matrix6.rs
#[macro_use]
extern crate beaumont_macros;
fn main() {
    matrix![ 1 , 2 , 3 |
           | 4 , 5 , 6 , 7 ];
}